[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.rst"
version = "21.9.0"
name = "asserto"
underlines = "=-~"
all_bullets = true

[tool.poetry]
name = "asserto"
version = "0.1.0"
description = "A fluent DSL for python assertions."
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.md"
include = ["asserto/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.3.4"

[tool.poetry.dev-dependencies]
codecov = "^2.1.12"
pre-commit = "^2.20.0"
mkdocs = "^1.4.0"
mkdocs-material = "^9.1.17"
mkdocstrings= {extras = ["python"], version = "^0.19.0"}
pytest = "^7"
tox = "^4"
pip = "^22"
coverage = "^7"
towncrier = "^22"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.3.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:RequestsDependencyWarning:"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
use_parentheses = 'True'
ensure_newline_before_comments = 'True'
line_length = 120
force_single_line = 'True'
known_first_party = 'asserto'
default_section = 'THIRDPARTY'
forced_separate = 'tests'
skip = '.tox,.eggs,ci/templates'

[tool.mypy]
mypy_path = '/asserto'
check_untyped_defs = 'True'
disallow_any_generics = 'True'
ignore_missing_imports = 'False'
show_error_codes = 'True'
strict_equality = 'True'
warn_redundant_casts = 'True'
warn_return_any = 'False'
warn_unreachable = 'True'
warn_unused_configs = 'True'
no_implicit_reexport = 'False'
ignore_errors = 'False'

[tool.black]
target-version = ['py310']
line-length = 120

[tool.flake8]
# flake8 does not currently support pyproject.toml (handle via pre-commit directly).
